Fix Div Alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,8 +27,8 @@
    display:flex; 
    flex-wrap: wrap;
    flex-direction: row; 
-   justify-content: space-between;
-   align-items:baseline ;
+   justify-content: space-evenly;
+   align-items: center ;
    
 
 }
